deploy: a96b7804706318ca4156f6e56bd9bb9a5847220a

--- a/Writeups/hackthebox-holmes-ctf-2025-the-payload/hackthebox-holmes-ctf-2025-the-payload.html
+++ b/Writeups/hackthebox-holmes-ctf-2025-the-payload/hackthebox-holmes-ctf-2025-the-payload.html
@@ -171,7 +171,7 @@ Upon reading you can easily find out the answer.</p>
 <p><strong>Question 9: Which Opcode is responsible for running the encrypted payload? (** ** **)</strong></p>
 <p>In the same <code>ScanAndSpread</code> function, we find an encrypted blob. And then I started looking where its been called. And just few lines below this, the call was made and we can find the opcode in the Listing view.</p>
 <p><img alt="image.png" src="The%20Payload%20-%20Holmes%20CTF%20WriteUP%2027bd0bcb44a88019bba2caa2e64bc584/image%207.png" /></p>
-<div class="success-box">Answer: ff 50 60*</div>
+<div class="success-box">Answer: ff 50 60</div>
 
 <p><strong>Question 10: Find → Block → Flag: Identify the killswitch domain, spawn the Docker to block it, and claim the flag.(HTB{*******_*********_********_*****})</strong></p>
 <p>As we have already identified the kill switch in the <strong>Question 7</strong> we have the encrypted string as <code>KXgmYHMADxsV8uHiuPPB3w==</code> .<br />
